    - [x86] apic/vector: Fix ordering in vector assignment
    - [x86] kprobes: Fix optprobe to detect INT3 padding correctly

  [ Salvatore Bonaccorso ]
  * Ignore ABI changes for various nf_ and nft_ symbols
  * Ignore ABI change for irq_create_mapping (removed)
  * [x86] drm/i915: Update TGL and RKL DMC firmware versions (Closes: #974646)

 -- Salvatore Bonaccorso <carnil@debian.org>  Sat, 12 Dec 2020 14:26:50 +0100

linux (5.9.11-1) unstable; urgency=medium

  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.9.10
    - [powerpc*] 64s: flush L1D on kernel entry (CVE-2020-4788)
    - [powerpc*] 64s: flush L1D after user accesses (CVE-2020-4788)
    - [powerpc*] Only include kup-radix.h for 64-bit Book3S
    - Input: sunkbd - avoid use-after-free in teardown paths (CVE-2020-25669)
    - mac80211: always wind down STA state
    - can: proc: can_remove_proc(): silence remove_proc_entry warning
    - [powerpc*] smp: Call rcu_cpu_starting() earlier
    - [x86] perf/x86/intel/uncore: Fix Add BW copypasta
    - [x86] KVM: clflushopt should be treated as a no-op by emulation
    - [arm64,x86] ACPI: GED: fix -Wformat
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.9.11
    - ah6: fix error return code in ah6_input()
    - atm: nicstar: Unmap DMA on send error
    - bnxt_en: read EEPROM A2h address using page 0
    - devlink: Add missing genlmsg_cancel() in devlink_nl_sb_port_pool_fill()
    - [arm64] enetc: Workaround for MDIO register access issue
    - Exempt multicast addresses from five-second neighbor lifetime
    - inet_diag: Fix error path to cancel the meseage in inet_req_diag_fill()
    - ipv6: Fix error path to cancel the meseage
    - lan743x: fix issue causing intermittent kernel log warnings
    - lan743x: prevent entire kernel HANG on open, for some platforms
    - net: b44: fix error return code in b44_init_one()
    - net: bridge: add missing counters to ndo_get_stats64 callback