@@ -335,6 +335,7 @@ linux (5.9.15-1) UNRELEASED; urgency=medium
   * Ignore ABI changes for various nf_ and nft_ symbols
   * Ignore ABI change for irq_create_mapping (removed)
   * [x86] drm/i915: Update TGL and RKL DMC firmware versions (Closes: #974646)
+  * [rt] Refresh "mm/zsmalloc: copy with get_cpu_var() and locking"
 
  -- Salvatore Bonaccorso <carnil@debian.org>  Sat, 12 Dec 2020 14:26:50 +0100
 
